--- a/mothra/templates/base.html
+++ b/mothra/templates/base.html
@@ -7,7 +7,7 @@
     <meta property="og:description" content="Home of Mothra." />
     <meta property="og:url" content="https://vmothra.fun" />
     <meta property="og:image" content="{{ url_for('static', filename='img/forwards.png') }}" />
-    <title>Mothra (Innovac)</title>
+    <title>Mothra</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
